.metadata/.plugins/org.eclipse.cdt.ui/xuartlite_intr_tapp_example_1.build.log
17:07:06 **** Build of configuration Debug for project xuartlite_intr_tapp_example_1 ****
make all 
Building file: ../src/xuartlite_intr_tapp_example.c
Invoking: MicroBlaze gcc compiler
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xuartlite_intr_tapp_example.o" -I/home/chrispy/workspace/FPRock_CmodA735t/FPRock_Platform/export/FPRock_Platform/sw/FPRock_Platform/standalone_domain/bspinclude/include -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mno-xl-soft-div -mcpu=v11.0 -mno-xl-soft-mul -mxl-multiply-high -mhard-float -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/xuartlite_intr_tapp_example.d" -MT"src/xuartlite_intr_tapp_example.o" -o "src/xuartlite_intr_tapp_example.o" "../src/xuartlite_intr_tapp_example.c"
../src/xuartlite_intr_tapp_example.c: In function 'main':
../src/xuartlite_intr_tapp_example.c:78:30: error: 'XPAR_INTC_0_UARTLITE_0_VEC_ID' undeclared (first use in this function); did you mean 'XPAR_INTC_0_UARTLITE_1_VEC_ID'?
 #define UARTLITE_IRPT_INTR   XPAR_INTC_0_UARTLITE_0_VEC_ID
                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/xuartlite_intr_tapp_example.c:178:6: note: in expansion of macro 'UARTLITE_IRPT_INTR'
      UARTLITE_IRPT_INTR);
      ^~~~~~~~~~~~~~~~~~
../src/xuartlite_intr_tapp_example.c:78:30: note: each undeclared identifier is reported only once for each function it appears in
 #define UARTLITE_IRPT_INTR   XPAR_INTC_0_UARTLITE_0_VEC_ID
                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/xuartlite_intr_tapp_example.c:178:6: note: in expansion of macro 'UARTLITE_IRPT_INTR'
      UARTLITE_IRPT_INTR);
      ^~~~~~~~~~~~~~~~~~
make: *** [src/subdir.mk:23: src/xuartlite_intr_tapp_example.o] Error 1

17:07:07 Build Finished (took 169ms)

